overflown text fixed

--- a/src/index.css
+++ b/src/index.css
@@ -216,10 +216,10 @@ input[type="text"]:focus {
   max-height: 300px;
 }
 
-.carousel-img:hover {
+/* .carousel-img:hover {
   box-shadow: 0px 0px 30px 0px var(--text);
   opacity: 0.5;
-}
+} */
 
 .movie-year,
 .movie-star,
@@ -307,6 +307,21 @@ input[type="text"]:focus {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  overflow: hidden;
+}
+
+.popular-film-directed {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.ellipsis {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+  white-space: pre-wrap;
 }
 /************************/
 
@@ -479,6 +494,12 @@ hr {
 }
 
 /*********************** media *********************/
+/* fixing overflow text */
+@media (min-width: 400px) {
+  .ellipsis {
+    -webkit-line-clamp: 2;
+  }
+}
 
 @media (min-width: 768px) {
   #popular-movies-container {
